Cleanup: remove redundant casts from findViewById, minor refactors and formatting across activities/adapters; simplify DbHelper checks